--- a/code/Dockerfile
+++ b/code/Dockerfile
@@ -2,3 +2,13 @@
 FROM vllm/vllm-openai:v0.8.0
 
 RUN pip install vllm==0.8.0
+COPY requirements.txt .
+RUN pip install --no-deps -r requirements.txt
+
+COPY code/server.py /app/server.py
+
+WORKDIR /app
+
+EXPOSE 5000
+
+CMD ["python", "server.py"]
